# fed

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  IWriter.h  db.h  fed.h  init_program.h  io.h  main.c  main_loop.h  parse.h  parse_args.h  rss_date_parse.h  str.h  transfer.h  transfer_mem.h  xmlparse.h
test/: CMakeLists.txt  db.c  db_unhappy.c  init_program.c  io.c  parse.c  parse_args.c  rss_date_parse.c  str.c  transfer.c  transfer_mem.c  xml1.h  xml2.h
